--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "dependencies": {
-    "express": "^5.1.0"
-  },
   "name": "the-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,11 +16,14 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "dependencies": {
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
   "bugs": {
     "url": "https://github.com/viqSTAR/The-Project/issues"
   },
-  "homepage": "https://github.com/viqSTAR/The-Project#readme",
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+  "homepage": "https://github.com/viqSTAR/The-Project#readme"
 }
